[gd_scene load_steps=8 format=3 uid="uid://c4m5q4lo011ot"]

[ext_resource type="Script" path="res://ui_menu/special_shop.gd" id="1_er3yq"]
[ext_resource type="PackedScene" uid="uid://d3yiwu2sfsr54" path="res://ui_menu/Component/list_scroll_items.tscn" id="1_m3qpe"]
[ext_resource type="LabelSettings" uid="uid://2nnfgo6qbqr8" path="res://game/Game_asset/tres/game_play_time_label.tres" id="3_1g7tu"]
[ext_resource type="Texture2D" uid="uid://dwyalj0a5fgd3" path="res://Fonts/icon/refresh.png" id="3_kjwhw"]
[ext_resource type="LabelSettings" uid="uid://de803cw7pcqoq" path="res://ui_menu/Component/scroll_item_preview/item_type.tres" id="3_wxxr2"]
[ext_resource type="FontFile" uid="uid://moo03uvurtlf" path="res://Fonts/coiny-regular.ttf" id="5_ew5vd"]

[sub_resource type="LabelSettings" id="LabelSettings_1vias"]
font = ExtResource("5_ew5vd")
font_size = 22
font_color = Color(0.879511, 0.22215, 0.192706, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="SpecialShop" type="PanelContainer"]
process_mode = 3
self_modulate = Color(0, 0, 0, 0)
custom_minimum_size = Vector2(600, 630)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_er3yq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Empty" type="Control" parent="VBoxContainer"]
self_modulate = Color(0, 0, 0, 0)
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
mouse_filter = 2

[node name="MarginItems" type="MarginContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ListScrollItem" parent="VBoxContainer/MarginItems" instance=ExtResource("1_m3qpe")]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_top = 7.0
offset_right = -30.0
offset_bottom = 117.0
grow_horizontal = 0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TimeRefreshText" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "_refresh_ready_"
label_settings = ExtResource("3_wxxr2")
vertical_alignment = 1

[node name="TimeRefreshNumber" type="Label" parent="Control/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = ExtResource("3_1g7tu")

[node name="TextureRect" type="TextureRect" parent="Control/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_kjwhw")
stretch_mode = 5

[node name="SkipLabel" type="Label" parent="Control/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "_skip_"
label_settings = SubResource("LabelSettings_1vias")

[node name="ButtonRefresh" type="Button" parent="Control/PanelContainer"]
show_behind_parent = true
layout_mode = 2
focus_mode = 0
action_mode = 0
flat = true
icon_alignment = 2

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="Control/PanelContainer/ButtonRefresh" to="." method="_on_button_refresh_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
